--- a/src/Views/Clients/Clients.scss
+++ b/src/Views/Clients/Clients.scss
@@ -1,7 +1,59 @@
+@import '../../styles/constants.scss';
+
 #client-view {
   padding: 2em;
 }
 
 .client-list {
-  padding: 2em;
+  // padding: 10px;
+  padding-left: 0;
+  padding-bottom: 5px;
+  background-color: azure;
+  color: black;
+  border-radius: $borderRadius;
+
+  .client-header {
+    background-color: #ececec;
+    padding: 10px;
+    margin-bottom: 0;
+  }
+}
+
+.client-tag {
+  width: 30px;
+  height: 30px;
+  background-color: #548ce5;
+  color: white;
+  padding: 5px;
+  border-radius: $borderRadius;
+  margin-right: 5px;
+}
+
+.task-list {
+  padding-left: 0;
+  li {
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid rgba(#9e9e9e, 0.3);
+    }
+  }
+
+  .start-timer-button {
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: $borderRadius;
+
+    &:hover {
+      background-color: #99cc96;
+      color: white;
+    }
+  }
 }
